--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,9 @@ dependencies {
     compile('com.mikepenz:materialdrawer:5.3.6@aar') {
         transitive = true
     }
+    compile 'com.roughike:bottom-bar:1.4.0.1'
+    compile 'com.aurelhubert:ahbottomnavigation:1.3.3'
+
+
+
 }
